Optimized by extending the data model
